fixed players table: jumping image and player names

--- a/eclipse project/Multiplayer/WebContent/css/reversi.css
+++ b/eclipse project/Multiplayer/WebContent/css/reversi.css
@@ -1,5 +1,13 @@
 @CHARSET "ISO-8859-1";
 
+#score div {
+	display: inline-block;
+}
+
+#score img {
+	height: 52px;
+}
+
 #board {
 	display: table;
 	border: 1px solid black;
